# dns-resolver

./: Cargo.toml  LICENSE  README.md
src/: cache.rs  domain_name.rs  error.rs  lib.rs  message.rs  packet.rs  query.rs  resolver.rs  resource_record.rs  rr_types.rs  utils.rs
