[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
anyhow = "1.0.71"
thiserror = "1.0.40"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version="1.28.2", features=["net", "macros", "rt-multi-thread"] }
priority-queue = "1.3.2"
